[package]
name = "evdev"
version = "0.11.7"
authors = ["Corey Richardson <corey@octayn.net>"]
description = "evdev interface for Linux"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/cmr/evdev"
documentation = "https://docs.rs/evdev"
edition = "2021"

[features]
serde = ["serde_1", "paste"]
tokio = ["tokio_1", "futures-core"]

[dependencies]
libc = "0.2.121"
bitvec = "1.0.0"
cfg-if = "1.0"
nix = "0.23"
thiserror = "1"
paste = { version = "1.0", optional = true }

serde_1 = { package = "serde", version = "1.0", features = ["derive"], optional = true }
tokio_1 = { package = "tokio", version = "1.17", features = ["fs", "net"], optional = true }
futures-core = { version = "0.3", optional = true }

[dev-dependencies]
tokio_1 = { package = "tokio", version = "1.17", features = ["macros", "rt-multi-thread"] }
itertools = "0.10"

[[example]]
name = "evtest_tokio"
required-features = ["tokio"]
