[package]
name = "evdev"
version = "0.13.1"
authors = ["Corey Richardson <corey@octayn.net>"]
description = "evdev interface for Linux"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/cmr/evdev"
documentation = "https://docs.rs/evdev"
edition = "2021"
rust-version = "1.64"

[features]
serde = ["dep:serde"]
tokio = ["dep:tokio"]
stream-trait = ["tokio", "futures-core"]
device-test = []

[dependencies]
libc = { version = "0.2.121", features = ["extra_traits"]}
bitvec = "1.0.0"
cfg-if = "1.0"
nix = { version = "0.29", features = ["ioctl", "fs", "event"] }

serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.17", features = ["fs","time", "net"], optional = true }
futures-core = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "time"] }
itertools = "0.10"

[[example]]
name = "evtest_tokio"
required-features = ["tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
