[package]
name = "evdev"
version = "0.13.3"
authors = ["Corey Richardson <corey@octayn.net>"]
description = "evdev interface for Linux"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/cmr/evdev"
documentation = "https://docs.rs/evdev"
edition = "2021"
rust-version = "1.64"

[features]
serde = ["dep:serde"]
async-io = ["dep:async-io", "dep:async-fs", "dep:futures-lite"]
tokio = ["dep:tokio"]
stream-trait = ["tokio", "futures-core"]
device-test = []

[dependencies]
libc = { version = "0.2.121", features = ["extra_traits"]}
bitvec = "1.0.0"
cfg-if = "1.0"
nix = { version = "0.29", features = ["ioctl", "fs", "event"] }

serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.17", features = ["fs","time", "net"], optional = true }
futures-core = { version = "0.3", optional = true }
async-io = { version = "2.6.0", optional = true }
async-fs = { version = "2.2.0", optional = true }
futures-lite = { version = "2.6.1", optional = true }

[dev-dependencies]
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "time"] }
itertools = "0.10"
async-executor = "1.13.3"

[[example]]
name = "evtest_tokio"
required-features = ["tokio"]

[[example]]
name = "evtest_async-io"
required-features = ["async-io"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
